--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Maven+Pro:wght@400;500&display=swap');
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Maven Pro', sans-serif;
+  font-weight: 500;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Libre Franklin', sans-serif;
+}
+
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  margin-block: auto;
+}
+
+header, footer {
+  padding-block: 2.5rem;
 }
