--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,85 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Maven+Pro:wght@400;500&display=swap');
+
+:root {
+    --primary: #f95f4e;
+    --primary-trans: hsl(6, 93%, 71%, 0.9);
+    --secondary: hsl(209, 64%, 22%);
+    --secondary-trans: hsl(209, 64%, 22%, 0.5);
+}
+
 * {
-  box-sizing: border-box;
-  margin: 0;
+    box-sizing: border-box;
+    margin: 0;
 }
 
 body {
-  font-family: 'Maven Pro', sans-serif;
-  font-weight: 500;
+    font-family: 'Maven Pro', sans-serif;
+    font-weight: 500;
+    background: url('./assets/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-h1, h2, h3, h4 {
-  font-family: 'Libre Franklin', sans-serif;
+h1,
+h2,
+h3,
+h4 {
+    color: white;
+    font-family: 'Libre Franklin', sans-serif;
+}
+
+a {
+    text-decoration: underline;
+    color: #fff;
+}
+
+a:hover {
+    text-decoration: none;
 }
 
 .app {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+    min-height: 100vh;
+    position: relative;
+    z-index: 400;
+    /* display: flex;
+  flex-direction: column; */
 }
 
-main {
-  margin-block: auto;
+header {
+    /* background-color: rgba(20, 57, 92, .9); */
+    padding-block-start: 1rem;
+    padding-block-end: 1.5rem;
+    text-shadow: 1px 2px 2px var(--secondary);
+    display: flex;
+    align-items: center;
+    text-align: center;
 }
 
-header, footer {
-  padding-block: 2.5rem;
+footer {
+    padding-block: 2rem;
+    color: #fff;
+    background-color: var(--primary-trans);
+    text-align: center;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    /* background-color: rgba(0 0 0 / 50%); */
+    background: rgb(0, 0, 0);
+    background: radial-gradient(
+        circle,
+        rgba(0, 0, 0, 1) 20%,
+        var(--secondary-trans) 100%
+    );
+    z-index: 1;
+}
+
+@media (max-width: 348px) {
+    header {
+        padding-block: 1rem;
+    }
 }
