--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Maven+Pro:wght@400;500&display=swap');
 
 :root {
-    --primary: #f95f4e;
-    --primary-trans: hsl(6, 93%, 71%, 0.9);
+    --primary: #ef6a52;
+    --primary-trans: rgba(239, 106, 82, .9);
     --secondary: hsl(209, 64%, 22%);
     --secondary-trans: hsl(209, 64%, 22%, 0.5);
 }
@@ -26,6 +26,7 @@ h3,
 h4 {
     color: white;
     font-family: 'Libre Franklin', sans-serif;
+    /* word-break: break-word; */
 }
 
 a {
