--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Maven+Pro:wght@400;500&display=swap');
 
 :root {
-    --primary: #ef6a52;
-    --primary-trans: rgba(239, 106, 82, .9);
+    --primary-700: #bd5547;
+    --primary-600: #ef6950;
+    --primary-500: #e17363;
+    --primary-400: #f48473;
+    --primary-300: #ff926f;
+    --secondary-200: #daf092;
+    --secondary-300: #cce586;
+    --secondary-400: #aee48c;
+    --secondary-500: #6ca14e;
+    --secondary-600: #4e8231;
     --secondary: hsl(209, 64%, 22%);
-    --secondary-trans: hsl(209, 64%, 22%, 0.5);
 }
 
 * {
@@ -18,20 +25,22 @@ body {
     background: url('./assets/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 h1,
 h2,
 h3,
 h4 {
-    color: white;
+    font-size: 2.5em;
+    color: var(--primary-600);
     font-family: 'Libre Franklin', sans-serif;
     /* word-break: break-word; */
 }
 
 a {
     text-decoration: underline;
-    color: #fff;
+    color: inherit;
 }
 
 a:hover {
@@ -50,7 +59,7 @@ header {
     /* background-color: rgba(20, 57, 92, .9); */
     padding-block-start: 1rem;
     padding-block-end: 1.5rem;
-    text-shadow: 1px 2px 2px var(--secondary);
+    text-shadow: 1px 2px 2px var(--secondary-300);
     display: flex;
     align-items: center;
     text-align: center;
@@ -58,8 +67,8 @@ header {
 
 footer {
     padding-block: 2rem;
-    color: #fff;
-    background-color: var(--primary-trans);
+    color: #000;
+    background-color: var(--secondary-200);
     text-align: center;
 }
 
@@ -70,12 +79,8 @@ footer {
     width: 100vw;
     height: 100vh;
     /* background-color: rgba(0 0 0 / 50%); */
-    background: rgb(0, 0, 0);
-    background: radial-gradient(
-        circle,
-        rgba(0, 0, 0, 1) 20%,
-        var(--secondary-trans) 100%
-    );
+    /* background: rgb(0, 0, 0); */
+    background: radial-gradient( circle, rgb(255 255 255 / 80%) 0%, rgb(255 255 255 / 100%) 100% );
     z-index: 1;
 }
 
